[gd_scene load_steps=20 format=3 uid="uid://cgc2um7dp3xyq"]

[ext_resource type="PackedScene" uid="uid://b4exshole0aqw" path="res://Scenes/player.tscn" id="1_80hhf"]
[ext_resource type="Script" path="res://Scenes/Levels/Tutorial_Level.gd" id="1_spu3o"]
[ext_resource type="PackedScene" uid="uid://d4dgbxwfmsdgk" path="res://Scenes/geo_block.tscn" id="2_hhii2"]
[ext_resource type="ArrayMesh" uid="uid://dol6536jkac75" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/desk.obj" id="4_ekxsg"]
[ext_resource type="PackedScene" uid="uid://nitrdaj011yh" path="res://Scenes/dirtyable_prop.tscn" id="6_dx8r4"]
[ext_resource type="ArrayMesh" uid="uid://bcq6sg7cndoll" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/loungeSofa.obj" id="6_ps2ki"]
[ext_resource type="PackedScene" uid="uid://b6pll2lsrhfgc" path="res://Assets/Models/kenney_furniture-kit/Models/GLTF format/chair.glb" id="7_2u4b2"]
[ext_resource type="ArrayMesh" uid="uid://cn753ebtdfeal" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/bedSingle.obj" id="7_x4023"]
[ext_resource type="ArrayMesh" uid="uid://cb46t18hlxgfk" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/bookcaseClosedWide.obj" id="8_7ba53"]
[ext_resource type="PackedScene" uid="uid://bl3px7gaff87e" path="res://Assets/Models/kenney_furniture-kit/Models/GLTF format/dryer.glb" id="9_21ogd"]
[ext_resource type="ArrayMesh" uid="uid://he5obfg73rj6" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/bathtub.obj" id="9_ewxn2"]
[ext_resource type="ArrayMesh" uid="uid://fb506hvq03l2" path="res://Assets/Models/kenney_furniture-kit/Models/OBJ format/toilet.obj" id="10_ot3ey"]
[ext_resource type="PackedScene" uid="uid://cviqaxpmwolrb" path="res://Assets/Models/kenney_furniture-kit/Models/GLTF format/table.glb" id="11_blu3t"]
[ext_resource type="PackedScene" uid="uid://3np8xy046jt1" path="res://Assets/Models/kenney_furniture-kit/Models/GLTF format/washerDryerStacked.glb" id="13_h8qd2"]
[ext_resource type="PackedScene" uid="uid://dur881inx2ega" path="res://Assets/Models/kenney_furniture-kit/Models/GLTF format/televisionVintage.glb" id="14_m40pg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_id47p"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_a66tn"]
sky_material = SubResource("ProceduralSkyMaterial_id47p")

[sub_resource type="Environment" id="Environment_injp6"]
background_mode = 2
sky = SubResource("Sky_a66tn")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_gqsfw"]
font_size = 64
outline_size = 12
outline_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="World" type="Node"]
script = ExtResource("1_spu3o")
goto_main_timer = 60.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_injp6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CharacterBody3D" parent="." instance=ExtResource("1_80hhf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
max_hp = null

[node name="Geometry" type="Node" parent="."]

[node name="geo_block" parent="Geometry" instance=ExtResource("2_hhii2")]
transform = Transform3D(30, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0)

[node name="geo_block2" parent="Geometry" instance=ExtResource("2_hhii2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 20, 15, 1, 0)

[node name="geo_block3" parent="Geometry" instance=ExtResource("2_hhii2")]
transform = Transform3D(30, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -10)

[node name="geo_block4" parent="Geometry" instance=ExtResource("2_hhii2")]
transform = Transform3D(30, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 10)

[node name="geo_block5" parent="Geometry" instance=ExtResource("2_hhii2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 20, -15, 1, 0)

[node name="Wet Things" type="Node3D" parent="."]

[node name="Desk" type="MeshInstance3D" parent="Wet Things"]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, -5, 0.5, -2)
mesh = ExtResource("4_ekxsg")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Wet Things/Desk" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.366503, 0, 0.201804)
start_dirty = true
dirty_type = 1
dirty_level = 2

[node name="LoungeSofa" type="MeshInstance3D" parent="Wet Things"]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, 5, 0.5, -3)
mesh = ExtResource("6_ps2ki")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Wet Things/LoungeSofa" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.455036, 0, 0.198106)
start_dirty = true
dirty_type = 1
dirty_level = 2

[node name="Dry Things" type="Node3D" parent="."]

[node name="BedSingle" type="MeshInstance3D" parent="Dry Things"]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, -13.7597, 0.500001, -3.05401)
mesh = ExtResource("7_x4023")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Dry Things/BedSingle" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.687545, 0, 0.69153)
start_dirty = true

[node name="BookcaseClosedWide" type="MeshInstance3D" parent="Dry Things"]
transform = Transform3D(-1.74846e-07, 0, -4, 0, 4, 0, 4, 0, -1.74846e-07, -12.6749, 0.499999, 1.55623)
mesh = ExtResource("8_7ba53")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Dry Things/BookcaseClosedWide" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1, 0, -8.74229e-08, 0, 1, 0, 8.74229e-08, 0, -1, -0.387194, 0, 0.0694363)
start_dirty = true
dirty_level = 2

[node name="Goo Things" type="Node3D" parent="."]

[node name="Bathtub" type="MeshInstance3D" parent="Goo Things"]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, 8, 0.5, 8)
mesh = ExtResource("9_ewxn2")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Goo Things/Bathtub" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1.7677, 0, 8.74228e-08, 0, 1, 0, -1.54537e-07, 0, -1, -0.601105, 0, 0.300994)
start_dirty = true
dirty_type = 2
dirty_level = 2

[node name="Toilet" type="MeshInstance3D" parent="Goo Things"]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, 12, 0.5, 2)
mesh = ExtResource("10_ot3ey")
skeleton = NodePath("../..")

[node name="DirtyableProp" parent="Goo Things/Toilet" instance=ExtResource("6_dx8r4")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.157595, 0, -0.224955)
start_dirty = true
dirty_type = 2

[node name="All Things" type="Node" parent="."]

[node name="chair" parent="All Things" instance=ExtResource("7_2u4b2")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, -4, 0.5, -5)

[node name="dryer" parent="All Things" instance=ExtResource("9_21ogd")]
transform = Transform3D(-1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, 13, 0.5, -4)

[node name="table" parent="All Things" instance=ExtResource("11_blu3t")]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, -10, 0.5, 8)

[node name="washerDryerStacked" parent="All Things" instance=ExtResource("13_h8qd2")]
transform = Transform3D(-1.74846e-07, 0, 4, 0, 4, 0, -4, 0, -1.74846e-07, 13, 0.5, -1)

[node name="televisionVintage" parent="All Things" instance=ExtResource("14_m40pg")]
transform = Transform3D(-4, 0, -3.49691e-07, 0, 4, 0, 3.49691e-07, 0, -4, -7.31098, 1.90094, 6.74158)

[node name="Tut_Win" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="Tut_Win"]
offset_right = 1271.0
offset_bottom = 711.0

[node name="Label" type="Label" parent="Tut_Win/MarginContainer"]
layout_mode = 2
text = "TUTORIAL COMPLETE!"
label_settings = SubResource("LabelSettings_gqsfw")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="sig_progress_update" from="." to="CharacterBody3D/HUD/LevelProgressBar" method="recv_progress"]
[connection signal="sig_timer_update" from="." to="CharacterBody3D/HUD/Countdown" method="_recv_time_left"]

[editable path="CharacterBody3D"]
[editable path="CharacterBody3D/HUD"]
